--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
-TITLE = 'Azure Voting App'
-VOTE1VALUE = 'Cats'
-VOTE2VALUE = 'Dogs'
+TITLE = 'Azure Voting App Updated'
+VOTE1VALUE = 'Horses'
+VOTE2VALUE = 'Cows'
 SHOWHOST = 'false'
